tests/ui/attributes/invalid_macro_export_argument.deny.stderr
error: valid forms for the attribute are `#![macro_export(local_inner_macros)]` and `#![macro_export]`
  --> $DIR/invalid_macro_export_argument.rs:7:1
   |
LL | #[macro_export(hello, world)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #57571 <https://github.com/rust-lang/rust/issues/57571>
note: the lint level is defined here
  --> $DIR/invalid_macro_export_argument.rs:4:24
   |
LL | #![cfg_attr(deny, deny(invalid_macro_export_arguments))]
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: valid forms for the attribute are `#![macro_export(local_inner_macros)]` and `#![macro_export]`
  --> $DIR/invalid_macro_export_argument.rs:14:1
   |
LL | #[macro_export(not_local_inner_macros)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #57571 <https://github.com/rust-lang/rust/issues/57571>

error: valid forms for the attribute are `#![macro_export(local_inner_macros)]` and `#![macro_export]`
  --> $DIR/invalid_macro_export_argument.rs:31:1
   |
LL | #[macro_export()]
   | ^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #57571 <https://github.com/rust-lang/rust/issues/57571>

error: valid forms for the attribute are `#![macro_export(local_inner_macros)]` and `#![macro_export]`
  --> $DIR/invalid_macro_export_argument.rs:38:1
   |
LL | #[macro_export("blah")]
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #57571 <https://github.com/rust-lang/rust/issues/57571>

error: aborting due to 4 previous errors

Future incompatibility report: Future breakage diagnostic:
error: valid forms for the attribute are `#![macro_export(local_inner_macros)]` and `#![macro_export]`
  --> $DIR/invalid_macro_export_argument.rs:7:1
   |
LL | #[macro_export(hello, world)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #57571 <https://github.com/rust-lang/rust/issues/57571>
note: the lint level is defined here
  --> $DIR/invalid_macro_export_argument.rs:4:24
   |
LL | #![cfg_attr(deny, deny(invalid_macro_export_arguments))]
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Future breakage diagnostic:
error: valid forms for the attribute are `#![macro_export(local_inner_macros)]` and `#![macro_export]`
  --> $DIR/invalid_macro_export_argument.rs:14:1
   |
LL | #[macro_export(not_local_inner_macros)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #57571 <https://github.com/rust-lang/rust/issues/57571>
note: the lint level is defined here
  --> $DIR/invalid_macro_export_argument.rs:4:24
   |
LL | #![cfg_attr(deny, deny(invalid_macro_export_arguments))]
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Future breakage diagnostic:
error: valid forms for the attribute are `#![macro_export(local_inner_macros)]` and `#![macro_export]`
  --> $DIR/invalid_macro_export_argument.rs:31:1
   |
LL | #[macro_export()]
   | ^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #57571 <https://github.com/rust-lang/rust/issues/57571>
note: the lint level is defined here
  --> $DIR/invalid_macro_export_argument.rs:4:24
   |
LL | #![cfg_attr(deny, deny(invalid_macro_export_arguments))]
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Future breakage diagnostic:
error: valid forms for the attribute are `#![macro_export(local_inner_macros)]` and `#![macro_export]`
  --> $DIR/invalid_macro_export_argument.rs:38:1
   |
LL | #[macro_export("blah")]
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #57571 <https://github.com/rust-lang/rust/issues/57571>
note: the lint level is defined here
  --> $DIR/invalid_macro_export_argument.rs:4:24
   |
LL | #![cfg_attr(deny, deny(invalid_macro_export_arguments))]
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

